<!-- SPDX-License-Identifier: MIT -->
<resources>
    <string name="app_name">EasySSHFS</string>

    <string name="title_section1">Mount points</string>
    <string name="title_section2">Log</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_clean_log">Clean</string>
    <string name="action_new_mount_point">Add</string>

    <string name="action_settings">Settings</string>

    <string name="debug_log_header">Debug log:\n\n</string>
    <string name="debug_log_title">Log</string>
    <string name="mount_point_title">Mount point</string>
    <string name="mount_point_list_title">Mount points</string>

    <string name="mount_point_name_hint">Mount point name</string>
    <string name="username_hint">Username</string>
    <string name="host_hint">Host</string>
    <string name="port_hint">Port</string>
    <string name="password_hint">Password</string>
    <string name="remote_path_hint">/remote/path</string>
    <string name="local_path_hint">/local/path</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="store">Store</string>
    <string name="automount">Auto</string>
    <string name="sshfs_options_hint">sshfs options</string>
    <string name="mount">mount</string>
    <string name="umount">umount</string>
    <string name="mounted">mounted</string>
    <string name="not_mounted">not mounted</string>
    <string name="force_permissions">force</string>
    <string name="select_dir">select</string>
    <string name="identity_file_hint">IdentityFile</string>
    <string name="identity_file_select">select</string>

    <!--  Settings screen  -->
    <string name="settings_title">Settings</string>
    <string name="automount_header">Automount</string>
    <string name="foreground_service_title">Use foreground service</string>
    <string name="foreground_service_summary_on">
        Start foreground service to manage network changes all the time</string>
    <string name="foreground_service_summary_off">
        Manage network changes only when application is in foreground</string>
    <string name="periodic_check_title">Check remote servers periodically</string>
    <string name="periodic_check_summary_on">
        Check remote servers periodically and automount mountpoints if remote server becomes available</string>
    <string name="periodic_check_summary_off">
        Don\'t try to automount mountpoints if remote server becomes unavailable</string>
    <string name="privacy_policy_web_page">Privacy Policy</string>
</resources>
