<!-- SPDX-License-Identifier: MIT -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/automount_header">

        <SwitchPreferenceCompat
            app:key="autoMountInForegroundService"
            app:persistent="false"
            app:summaryOff="@string/foreground_service_summary_off"
            app:summaryOn="@string/foreground_service_summary_on"
            app:title="@string/foreground_service_title" />

    </PreferenceCategory>

    <ListPreference
        app:defaultValue="@string/theme_mode_default"
        app:entries="@array/theme_names"
        app:entryValues="@array/theme_modes"
        app:key="themeMode"
        app:title="@string/theme_title" />

    <Preference
        app:key="webpage"
        app:title="@string/privacy_policy_web_page">
        <intent xmlns:android="http://schemas.android.com/apk/res/android"
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/bobrofon/easysshfs/blob/master/PRIVACY_POLICY.md" />
    </Preference>

</PreferenceScreen>
