<!-- SPDX-License-Identifier: MIT -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nsu.bobrofon.easysshfs.mountpointlist.mountpoint.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mount_point_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mount_point_name_hint"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/automount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/automount" />
        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/host_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/port_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/store_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/store" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/identity_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/identity_file_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/identity_file_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/identity_file_select" />
        </LinearLayout>

        <EditText
            android:id="@+id/remote_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remote_path_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/local_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/local_path_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/select_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_dir" />

            <CheckBox
                android:id="@+id/force_permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/force_permissions" />
        </LinearLayout>

        <EditText
            android:id="@+id/sshfs_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:hint="@string/sshfs_options_hint" />
    </LinearLayout>
</ScrollView>
